--- a/BACLevelCalculator/app/src/main/res/layout/activity_main.xml
+++ b/BACLevelCalculator/app/src/main/res/layout/activity_main.xml
@@ -46,22 +46,25 @@
         android:layout_marginEnd="8dp" />
 
 
-    <TextView
-        android:id="@+id/genderTextView"
+    <Switch
+        android:id="@+id/genderSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/genderText"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.689"
-        app:layout_constraintVertical_bias="0.016"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:checked="false"
+        android:showText="true"
+        android:splitTrack="false"
+        android:text="@string/genderText"
+        android:textOff="@string/femaleText"
+        android:textOn="@string/maleText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.808"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.017" />
 
 </android.support.constraint.ConstraintLayout>
