--- a/BACLevelCalculator/app/src/main/res/layout/activity_main.xml
+++ b/BACLevelCalculator/app/src/main/res/layout/activity_main.xml
@@ -67,4 +67,19 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.017" />
 
+    <Button
+        android:id="@+id/saveButton"
+        android:layout_width="336dp"
+        android:layout_height="55dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/saveButtonText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.129" />
+
 </android.support.constraint.ConstraintLayout>
