--- a/BACLevelCalculator/app/src/main/res/layout/activity_main.xml
+++ b/BACLevelCalculator/app/src/main/res/layout/activity_main.xml
@@ -269,7 +269,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/statusLabelText"
-        tools:layout_editor_absoluteX="91dp"
-        tools:layout_editor_absoluteY="408dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.237"
+        app:layout_constraintVertical_bias="0.834" />
+
+    <TextView
+        android:id="@+id/statusView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/statusColor"
+        android:text="@string/statusText"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.551"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.834" />
 
 </android.support.constraint.ConstraintLayout>
