--- a/BACLevelCalculator/app/src/main/res/layout/activity_main.xml
+++ b/BACLevelCalculator/app/src/main/res/layout/activity_main.xml
@@ -116,6 +116,7 @@
         app:layout_constraintVertical_bias="0.307" />
 
     <RadioGroup
+        android:id="@+id/drinkRadioGroup"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
@@ -129,8 +130,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.302"
-        android:id="@+id/radioGroup">
+        app:layout_constraintVertical_bias="0.302">
 
         <RadioButton
             android:id="@+id/oneOzRadio"
@@ -261,6 +261,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:max="25"
+        android:progress="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
