--- a/BACLevelCalculator/app/src/main/res/values/colors.xml
+++ b/BACLevelCalculator/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="statusColor">#6aff00</color>
+    <color name="orange">#ff9a00</color>
+    <color name="green">#008000</color>
+    <color name="red">#ff0000</color>
 </resources>
