--- a/InClass03/app/src/main/res/layout/activity_main.xml
+++ b/InClass03/app/src/main/res/layout/activity_main.xml
@@ -1,126 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.test.inclass03.MainActivity">
 
     <EditText
-        android:id="@+id/nameField"
-        android:layout_width="368dp"
+        android:id="@+id/emailEditText"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="@string/nameFieldText"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.017"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp" />
+        android:hint="@string/emailHint"
+        android:layout_below="@+id/nameEditText"
+        android:inputType="textEmailAddress"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
-        android:id="@+id/emailField"
-        android:layout_width="368dp"
+        android:id="@+id/nameEditText"
+        android:inputType="text"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:ems="10"
-        android:hint="@string/emailFieldText"
-        android:inputType="textMultiLine"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameField"
-        app:layout_constraintVertical_bias="0.0" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:hint="@string/nameHint" />
 
-    <ImageButton
-        android:id="@+id/avatarSelectButton"
+    <ImageView
+        android:id="@+id/selectAvatar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailField"
+        android:layout_below="@+id/emailEditText"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
         app:srcCompat="@drawable/select_avatar" />
 
-    <TextView
-        android:id="@+id/departmentTextView"
-        android:layout_width="77dp"
-        android:layout_height="16dp"
-        android:text="@string/departmentText"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintHorizontal_bias="0.027"
-        app:layout_constraintVertical_bias="0.519" />
-
     <RadioGroup
-        android:id="@+id/deptRadioGroup"
+        android:id="@+id/selectDepartment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@+id/departmentTextView"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginLeft="8dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.098">
+        android:layout_below="@+id/department"
+        android:layout_alignLeft="@+id/department"
+        android:layout_alignStart="@+id/department"
+        android:layout_marginLeft="12dp"
+        android:layout_marginStart="12dp">
 
         <RadioButton
-            android:id="@+id/sisRadioButton"
+            android:id="@+id/sisButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/sisRadioText" />
+            android:text="@string/sis" />
 
         <RadioButton
-            android:id="@+id/cisRadioButton"
+            android:id="@+id/csButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/cisRadioText" />
+            android:text="@string/cs" />
 
         <RadioButton
-            android:id="@+id/bioRadioButton"
+            android:id="@+id/bioButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/bioRadioText" />
+            android:text="@string/bio" />
     </RadioGroup>
 
     <TextView
-        android:id="@+id/currentMoodLabel"
+        android:id="@+id/department"
+        android:textSize="18dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:text="TextView"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.025"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.797" />
-</android.support.constraint.ConstraintLayout>
+        android:text="@string/department"
+        android:layout_marginTop="18dp"
+        android:layout_below="@+id/selectAvatar"
+        android:layout_alignLeft="@+id/selectMood"
+        android:layout_alignStart="@+id/selectMood" />
+
+    <Button
+        android:id="@+id/submitButton"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/selectMood"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="21dp"
+        android:text="@string/submit" />
+
+    <SeekBar
+        android:id="@+id/selectMood"
+        style="@style/Widget.AppCompat.SeekBar.Discrete"
+        android:layout_width="275dp"
+        android:layout_height="wrap_content"
+        android:max="3"
+        android:progress="3"
+        android:layout_marginTop="19dp"
+        android:layout_below="@+id/selectDepartment"
+        android:layout_alignRight="@+id/submitButton"
+        android:layout_alignEnd="@+id/submitButton" />
+
+    <ImageView
+        android:id="@+id/moodImage"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/selectDepartment"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        app:srcCompat="@drawable/angry" />
+
+</RelativeLayout>
